@@ -63,8 +63,7 @@ $AUTOCONF
 ./configure --enable-silent-rules
 $MAKE >stdout || { cat stdout; Exit 1; }
 cat stdout
-grep ' -c' stdout && Exit 1
-grep ' -o foo' stdout && Exit 1
+$EGREP ' (-c|-o)' stdout && Exit 1
 grep 'mv ' stdout && Exit 1
 grep 'CC    .*foo\.' stdout
 grep 'CC .*bar\.' stdout
@@ -80,13 +79,6 @@ $MAKE V=1 >stdout || { cat stdout; Exit 1; }
 cat stdout
 grep ' -c' stdout
 grep ' -o foo' stdout
-grep 'CC .*foo\.' stdout && Exit 1
-grep 'CC .*bar\.' stdout && Exit 1
-grep 'CC .*baz\.' stdout && Exit 1
-grep 'CC .*bla\.' stdout && Exit 1
-grep 'CCLD .*foo' stdout && Exit 1
-grep 'CCLD .*bar' stdout && Exit 1
-grep 'CCLD .*baz' stdout && Exit 1
-grep 'CCLD .*bla' stdout && Exit 1
+$EGREP '(CC|LD) ' stdout && Exit 1
 
 :
