@@ -67,8 +67,7 @@ $AUTOCONF
 ./configure am_cv_CC_dependencies_compiler_type=gcc --enable-silent-rules
 $MAKE >stdout || { cat stdout; Exit 1; }
 cat stdout
-grep ' -c' stdout && Exit 1
-grep ' -o libfoo' stdout && Exit 1
+$EGREP ' (-c|-o)' stdout && Exit 1
 grep 'mv ' stdout && Exit 1
 grep ' CC .*foo\.' stdout
 grep ' CC .*bar\.' stdout
@@ -84,14 +83,8 @@ $MAKE V=1 >stdout || { cat stdout; Exit 1; }
 cat stdout
 grep ' -c' stdout
 grep ' -o libfoo' stdout
-grep ' CC .*foo\.' stdout && Exit 1
-grep ' CC .*bar\.' stdout && Exit 1
-grep ' CC .*baz\.' stdout && Exit 1
-grep ' CC .*bla\.' stdout && Exit 1
-grep ' CCLD .*foo' stdout && Exit 1
-grep ' CCLD .*bar' stdout && Exit 1
-grep ' CCLD .*baz' stdout && Exit 1
-grep ' CCLD .*bla' stdout && Exit 1
+# The libtool command line can contain e.g. a `--tag=CC' option.
+sed 's/--tag=[^ ]*/--tag=x/g' stdout | $EGREP '(CC|LD) ' && Exit 1
 
 $MAKE distclean
 
