@@ -1,5 +1,14 @@
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests on silent-mode for C/Libtool made stricter.
+	* tests/silent.test: Made stricter w.r.t. the grepping of the
+	output produced by `make'.
+	* tests/silent2.test: Likewise.
+	* tests/silent4.test: Likewise.
+	* tests/silent9.test: Likewise.
+	* tests/silent3.test: Likewise, and add a final `make distclean'
+	command to keep it better in sync with tests/silent{4,9}.test.
+
 	Improved test silent5.test.
 	* tests/silent5.test: Remove by hand all generated C files after
 	non-verbose builds, to ensure the following builds are clean.
